--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
   - sudo apt -y install python3-distutils
   - sudo apt -y install python3-pip
   - sudo apt install -y git
-  - pip3 install --user --upgrade buildozer
+  - pip install --upgrade buildozer
   - python3 -m site
   - ls -l
   - cd buildozer
